# aisuite-tutorial

./: README.md
cli/py/aisuite-code-cli/: README.md  TRY_IT.md  pyproject.toml
cli/py/aisuite-code-cli/aisuite_code_cli/: __init__.py  agent.py  app.py  approval.py  config.py  main.py  rendering.py
platform/: .gitignore  pyproject.toml
platform/coworker/: __init__.py  agent.py  attachments.py  audit.py  cli.py  config.py  conversations.py  engine.py  events.py  permissions.py  project.py  roots.py  secrets.py  sessions.py
platform/coworker/agents/: __init__.py  base.py  chat.py  code.py  cowork.py  myhelper.py  registry.py
platform/coworker/automation/: __init__.py  models.py  scheduler.py  store.py  tools.py
platform/coworker/connectors/: __init__.py  adapters.py  base.py  browser_automation.py  cli.py  config.py  descriptors.py  email_tools.py  fake.py  gateway.py  integration_tools.py  senders.py  setup.py  superagent.py  tool_defs.py  tools.py
platform/coworker/mcp/: __init__.py  client.py  config.py  tools.py
platform/coworker/memory/: __init__.py  base.py  sqlite_store.py  tools.py
platform/coworker/providers/: __init__.py  anthropic_provider.py  base.py  capabilities.py  gemini_provider.py  openai_provider.py  registry.py  router.py
platform/coworker/server/: __init__.py  app.py  manager.py  run.py
platform/coworker/skills/: __init__.py  base.py
platform/coworker/tools/: __init__.py  directories.py  git.py  registry.py  search.py  shell.py  todo.py
platform/coworker/tui/: __init__.py  app.py
platform/coworker/web/: __init__.py  fetch.py  providers.py  tool.py
platform/docs/: config.example.toml  email-connector-spec.md
platform/packaging/: build_dmg.sh  build_windows.ps1  coworker-server.spec  server_entry.py
platform/surfaces/gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
platform/surfaces/gui/src/: App.tsx  api.ts  attach.ts  main.tsx  styles.css  tauri.ts  theme.ts  types.ts  useRoots.ts
platform/surfaces/gui/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
platform/surfaces/gui/src-tauri/capabilities/: default.json
platform/surfaces/gui/src-tauri/icons/: icon.icns  tray.rgba
platform/surfaces/gui/src-tauri/src/: lib.rs  main.rs
platform/surfaces/gui/src/components/: AddFolderForm.tsx  ApprovalCard.tsx  AuditView.tsx  Composer.tsx  DirectoryRequestCard.tsx  Dropdown.tsx  FolderGate.tsx  Icon.tsx  IntegrationsView.tsx  ManageModal.tsx  Markdown.tsx  ModelChecklist.tsx  Onboarding.tsx  RightRail.tsx  RootRow.tsx  RootsBar.tsx  ScheduledView.tsx  SessionIntro.tsx  Sidebar.tsx  SuperAgentView.tsx  TodoPanel.tsx  (+1 more)
platform/tests/: test_anthropic_provider.py  test_attachments.py  test_automation.py  test_code_tools.py  test_config.py  test_connectors.py  test_email_tools.py  test_engine.py  test_gemini_provider.py  test_mcp.py  test_memory.py  test_multiroot.py  test_provider_router.py  test_providers.py  test_secrets.py  test_server.py  test_settings.py  test_shell.py  test_skills.py  test_tools_permissions.py  test_tui.py  test_web_search.py
(+126 files in other folders)
