[package]
name = "coworker-desktop"
version = "0.1.0"
description = "OpenCoworker desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "coworker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
